bang on location regexps

--- a/INSTALL
+++ b/INSTALL
@@ -1,1 +1,5 @@
+Have realgud installed.
+From inside emacs, evaluate:
+
+  (compile (format "EMACSLOADPATH=:%s:%s ./autogen.sh" (file-name-directory (locate-library "test-simple.elc")) (file-name-directory (locate-library "realgud.elc"))))
 bash ./autogen.sh
